# tob2toa

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: toa_notebook.ipynb
src/tob2toa/: __init__.py  tob2toa.py
tests/: test_tob2toa.py
